# bpynodearrange

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi.yml
source/: blender_manifest.toml  config.py  keymaps.py  operators.py  properties.py  ui.py  utils.py
source/arrange/: graph.py  ordering.py  ranking.py  structs.py  sugiyama.py
source/arrange/placement/: bk.py  linear_segments.py
src/bpynodearrange/: __init__.py  config.py  utils.py
src/bpynodearrange/arrange/: coordinates.py  graph.py  multi_input.py  reroute.py  routing.py  structs.py  sugiyama.py
src/pynodearrange.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_sugiyama.py
